chore: cleanup munki
