# internal/database/sqlc/models.go
@@ -1035,59 +1035,59 @@ type MunkiHostStatus struct {
 }
 
 type MunkiPackage struct {
-	ID                           int64      `json:"id"`
-	SoftwareID                   int64      `json:"software_id"`
-	Version                      string     `json:"version"`
-	InstallerType                string     `json:"installer_type"`
-	UninstallMethod              string     `json:"uninstall_method"`
-	RestartAction                string     `json:"restart_action"`
-	MinimumMunkiVersion          string     `json:"minimum_munki_version"`
-	MinimumOSVersion             string     `json:"minimum_os_version"`
-	MaximumOSVersion             string     `json:"maximum_os_version"`
-	SupportedArchitectures       []string   `json:"supported_architectures"`
-	BlockingApplications         []string   `json:"blocking_applications"`
-	UnattendedInstall            bool       `json:"unattended_install"`
-	UnattendedUninstall          bool       `json:"unattended_uninstall"`
-	OnDemand                     bool       `json:"on_demand"`
-	Precache                     bool       `json:"precache"`
-	Autoremove                   bool       `json:"autoremove"`
-	AppleItem                    bool       `json:"apple_item"`
-	SuppressBundleRelocation     bool       `json:"suppress_bundle_relocation"`
-	ForceInstallAfterDate        *time.Time `json:"force_install_after_date"`
-	InstalledSize                int64      `json:"installed_size"`
-	PackagePath                  string     `json:"package_path"`
-	InstallerChoicesXml          string     `json:"installer_choices_xml"`
-	InstallerEnvironment         []byte     `json:"installer_environment"`
-	Installs                     []byte     `json:"installs"`
-	Receipts                     []byte     `json:"receipts"`
-	ItemsToCopy                  []byte     `json:"items_to_copy"`
-	Notes                        string     `json:"notes"`
-	InstallcheckScript           string     `json:"installcheck_script"`
-	UninstallcheckScript         string     `json:"uninstallcheck_script"`
-	PreinstallScript             string     `json:"preinstall_script"`
-	PostinstallScript            string     `json:"postinstall_script"`
-	PreuninstallScript           string     `json:"preuninstall_script"`
-	PostuninstallScript          string     `json:"postuninstall_script"`
-	UninstallScript              string     `json:"uninstall_script"`
-	VersionScript                string     `json:"version_script"`
-	PreinstallAlertEnabled       bool       `json:"preinstall_alert_enabled"`
-	PreinstallAlertTitle         string     `json:"preinstall_alert_title"`
-	PreinstallAlertDetail        string     `json:"preinstall_alert_detail"`
-	PreinstallAlertOkLabel       string     `json:"preinstall_alert_ok_label"`
-	PreinstallAlertCancelLabel   string     `json:"preinstall_alert_cancel_label"`
-	PreuninstallAlertEnabled     bool       `json:"preuninstall_alert_enabled"`
-	PreuninstallAlertTitle       string     `json:"preuninstall_alert_title"`
-	PreuninstallAlertDetail      string     `json:"preuninstall_alert_detail"`
-	PreuninstallAlertOkLabel     string     `json:"preuninstall_alert_ok_label"`
-	PreuninstallAlertCancelLabel string     `json:"preuninstall_alert_cancel_label"`
-	IconName                     string     `json:"icon_name"`
-	IconHash                     string     `json:"icon_hash"`
-	InstallerArtifactID          *int64     `json:"installer_artifact_id"`
-	UninstallerArtifactID        *int64     `json:"uninstaller_artifact_id"`
-	IconArtifactID               *int64     `json:"icon_artifact_id"`
-	Eligible                     bool       `json:"eligible"`
-	CreatedAt                    time.Time  `json:"created_at"`
-	UpdatedAt                    time.Time  `json:"updated_at"`
+	ID                                 int64      `json:"id"`
+	SoftwareID                         int64      `json:"software_id"`
+	Version                            string     `json:"version"`
+	InstallerType                      string     `json:"installer_type"`
+	UninstallMethod                    string     `json:"uninstall_method"`
+	RestartAction                      string     `json:"restart_action"`
+	MinimumMunkiVersion                string     `json:"minimum_munki_version"`
+	MinimumOSVersion                   string     `json:"minimum_os_version"`
+	MaximumOSVersion                   string     `json:"maximum_os_version"`
+	SupportedArchitectures             []string   `json:"supported_architectures"`
+	BlockingApplications               []string   `json:"blocking_applications"`
+	InstallableCondition               string     `json:"installable_condition"`
+	BlockingApplicationsManualQuitOnly bool       `json:"blocking_applications_manual_quit_only"`
+	BlockingApplicationsQuitScript     string     `json:"blocking_applications_quit_script"`
+	UnattendedInstall                  bool       `json:"unattended_install"`
+	UnattendedUninstall                bool       `json:"unattended_uninstall"`
+	OnDemand                           bool       `json:"on_demand"`
+	Precache                           bool       `json:"precache"`
+	Autoremove                         bool       `json:"autoremove"`
+	AppleItem                          bool       `json:"apple_item"`
+	SuppressBundleRelocation           bool       `json:"suppress_bundle_relocation"`
+	ForceInstallAfterDate              *time.Time `json:"force_install_after_date"`
+	InstalledSize                      int64      `json:"installed_size"`
+	PackagePath                        string     `json:"package_path"`
+	InstallerChoicesXml                string     `json:"installer_choices_xml"`
+	InstallerEnvironment               []byte     `json:"installer_environment"`
+	Installs                           []byte     `json:"installs"`
+	Receipts                           []byte     `json:"receipts"`
+	ItemsToCopy                        []byte     `json:"items_to_copy"`
+	Notes                              string     `json:"notes"`
+	InstallcheckScript                 string     `json:"installcheck_script"`
+	UninstallcheckScript               string     `json:"uninstallcheck_script"`
+	PreinstallScript                   string     `json:"preinstall_script"`
+	PostinstallScript                  string     `json:"postinstall_script"`
+	PreuninstallScript                 string     `json:"preuninstall_script"`
+	PostuninstallScript                string     `json:"postuninstall_script"`
+	UninstallScript                    string     `json:"uninstall_script"`
+	VersionScript                      string     `json:"version_script"`
+	PreinstallAlertEnabled             bool       `json:"preinstall_alert_enabled"`
+	PreinstallAlertTitle               string     `json:"preinstall_alert_title"`
+	PreinstallAlertDetail              string     `json:"preinstall_alert_detail"`
+	PreinstallAlertOkLabel             string     `json:"preinstall_alert_ok_label"`
+	PreinstallAlertCancelLabel         string     `json:"preinstall_alert_cancel_label"`
+	PreuninstallAlertEnabled           bool       `json:"preuninstall_alert_enabled"`
+	PreuninstallAlertTitle             string     `json:"preuninstall_alert_title"`
+	PreuninstallAlertDetail            string     `json:"preuninstall_alert_detail"`
+	PreuninstallAlertOkLabel           string     `json:"preuninstall_alert_ok_label"`
+	PreuninstallAlertCancelLabel       string     `json:"preuninstall_alert_cancel_label"`
+	InstallerArtifactID                *int64     `json:"installer_artifact_id"`
+	UninstallerArtifactID              *int64     `json:"uninstaller_artifact_id"`
+	Eligible                           bool       `json:"eligible"`
+	CreatedAt                          time.Time  `json:"created_at"`
+	UpdatedAt                          time.Time  `json:"updated_at"`
 }
 
 type MunkiPackageRelation struct {
